--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -50,6 +51,42 @@
         <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Últimos lançamentos</h2>
+        <div class="swiper">
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="/assets/ApacheKafka.svg"
+                        alt="Livro sobre Apache Kafka e SpringBoot da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Portugol.svg" alt="Livro sobre Portugol da Alura Books">
+                </div>
+                <div class="swiper-slide"><img src="/assets/Arquitetura.svg"
+                        alt="Livro sobre Arquitetura da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Gestão.svg" alt="Livro sobre Gestão da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Javascript.svg" alt="Livro sobre Javascript da Alura Books">
+                </div>
+                <div class="swiper-slide"><img src="/assets/Nodejs.svg" alt="Livro sobre Nodejs da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/ReactNative.svg"
+                        alt="Livro sobre React Native da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Tuning.svg" alt="Livro sobre Tuning da Alura Books"></div>
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <div class="swiper-scrollbar"></div>
+        </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: ".swiper-pagination",
+                type: "bullets",
+            },
+        });
+    </script>
 </body>
 
 </html>
