Criação do 2 carrossel com cards

--- a/index.html
+++ b/index.html
@@ -94,6 +94,47 @@
             </div>
         </div>
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Mais vendidos</h2>
+        <div class="swiper">
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="/assets/MetricasAgeis.svg"
+                        alt="Livro sobre Métricas Ágeis da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Construct2.svg" alt="Livro sobre Construc da Alura Books">
+                </div>
+                <div class="swiper-slide"><img src="/assets/Liderança.svg"
+                        alt="Livro sobre Liderança da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Gestão2.svg" alt="Livro sobre Gestão da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Guia Front-end.svg" alt="Livro sobre Guia do Front-end da Alura Books">
+                </div>
+                <div class="swiper-slide"><img src="/assets/UX.svg" alt="Livro sobre UX da Alura Books"></div>
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <div class="swiper-scrollbar"></div>
+        </div>
+
+        <div class="card">
+            <div class="card__descricao">
+                <div class="descricao">
+                    <img src="assets/Estrelinhas.svg" class="descricao__imagem">
+                    <h3 class="descricao__titulo">Autora do mês</h3>
+                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                </div>
+                <img src="assets/Juliana.svg" class="descricao__imagem">
+            </div>
+            <div class="card__botoes">
+                <ul class="botoes">
+                    <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                    <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                </ul>
+                <a href="#" class="botoes__ancora">Saiba mais</a>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
