--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -39,9 +40,36 @@
                 </li>
             </ul>
             <img src="assets/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Programação</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Front-End</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Infraestrutura</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Business</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Design & UX</a>
+                </li>
+            </ul>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+        </ul>
         <div class="container">
-            <a href="#"></a><img src="assets/Favoritos.svg" alt="Meus favoritos" class="container__imagem">
+            <a href="#"></a><img src="assets/Favoritos.svg" alt="Meus favoritos"
+                class="container__imagem container__imagem-transparente">
             <a href="#"></a><img src="assets/Compras.svg" alt="Carrinho de compras" class="container__imagem">
             <a href="#"></a><img src="assets/Usuário.svg" alt="Meu perfil" class="container__imagem">
         </div>
@@ -103,10 +131,11 @@
                         alt="Livro sobre Métricas Ágeis da Alura Books"></div>
                 <div class="swiper-slide"><img src="/assets/Construct2.svg" alt="Livro sobre Construc da Alura Books">
                 </div>
-                <div class="swiper-slide"><img src="/assets/Liderança.svg"
-                        alt="Livro sobre Liderança da Alura Books"></div>
+                <div class="swiper-slide"><img src="/assets/Liderança.svg" alt="Livro sobre Liderança da Alura Books">
+                </div>
                 <div class="swiper-slide"><img src="/assets/Gestão2.svg" alt="Livro sobre Gestão da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/Guia Front-end.svg" alt="Livro sobre Guia do Front-end da Alura Books">
+                <div class="swiper-slide"><img src="/assets/Guia Front-end.svg"
+                        alt="Livro sobre Guia do Front-end da Alura Books">
                 </div>
                 <div class="swiper-slide"><img src="/assets/UX.svg" alt="Livro sobre UX da Alura Books"></div>
             </div>
@@ -122,7 +151,8 @@
                     <img src="assets/Estrelinhas.svg" class="descricao__imagem">
                     <h3 class="descricao__titulo">Autora do mês</h3>
                     <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+                    </p>
                 </div>
                 <img src="assets/Juliana.svg" class="descricao__imagem">
             </div>
