--- a/index.html
+++ b/index.html
@@ -68,10 +68,17 @@
             <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a href="#"></a><img src="assets/Favoritos.svg" alt="Meus favoritos"
-                class="container__imagem container__imagem-transparente">
-            <a href="#"></a><img src="assets/Compras.svg" alt="Carrinho de compras" class="container__imagem">
-            <a href="#"></a><img src="assets/Usuário.svg" alt="Meu perfil" class="container__imagem">
+            <a href="#">
+                <img src="assets/Favoritos.svg" alt="Meus favoritos"
+                class="container__imagem container__imagem-transparente"></a>
+            <a href="#" class="container__link">
+                <img src="assets/Compras.svg" alt="Carrinho de compras" class="container__imagem">
+                <p class="container__texto">Minha sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="assets/Usuário.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
