--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
             <a href="#">
                 <img src="assets/Favoritos.svg" alt="Meus favoritos"
-                class="container__imagem container__imagem-transparente"></a>
+                    class="container__imagem container__imagem-transparente"></a>
             <a href="#" class="container__link">
                 <img src="assets/Compras.svg" alt="Carrinho de compras" class="container__imagem">
                 <p class="container__texto">Minha sacola</p>
@@ -88,87 +88,102 @@
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Últimos lançamentos</h2>
-        <div class="swiper">
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="/assets/ApacheKafka.svg"
-                        alt="Livro sobre Apache Kafka e SpringBoot da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/Portugol.svg" alt="Livro sobre Portugol da Alura Books">
+        <div class="carrossel__container">
+            <div class="swiper">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="/assets/ApacheKafka.svg"
+                            alt="Livro sobre Apache Kafka e SpringBoot da Alura Books"></div>
+                    <div class="swiper-slide"><img src="/assets/Portugol.svg" alt="Livro sobre Portugol da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/Arquitetura.svg"
+                            alt="Livro sobre Arquitetura da Alura Books"></div>
+                    <div class="swiper-slide"><img src="/assets/Gestão.svg" alt="Livro sobre Gestão da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/Javascript.svg"
+                            alt="Livro sobre Javascript da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/Nodejs.svg" alt="Livro sobre Nodejs da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/ReactNative.svg"
+                            alt="Livro sobre React Native da Alura Books"></div>
+                    <div class="swiper-slide"><img src="/assets/Tuning.svg" alt="Livro sobre Tuning da Alura Books">
+                    </div>
                 </div>
-                <div class="swiper-slide"><img src="/assets/Arquitetura.svg"
-                        alt="Livro sobre Arquitetura da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/Gestão.svg" alt="Livro sobre Gestão da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/Javascript.svg" alt="Livro sobre Javascript da Alura Books">
-                </div>
-                <div class="swiper-slide"><img src="/assets/Nodejs.svg" alt="Livro sobre Nodejs da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/ReactNative.svg"
-                        alt="Livro sobre React Native da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/Tuning.svg" alt="Livro sobre Tuning da Alura Books"></div>
-            </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
 
-            <div class="swiper-scrollbar"></div>
-        </div>
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
-                </div>
-                <img src="assets/Angular.svg" class="descricao__imagem">
+                <div class="swiper-scrollbar"></div>
             </div>
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
+
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img src="assets/Angular.svg" class="descricao__imagem">
+                </div>
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras">
+                        </li>
+                    </ul>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
+
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais vendidos</h2>
-        <div class="swiper">
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="/assets/MetricasAgeis.svg"
-                        alt="Livro sobre Métricas Ágeis da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/Construct2.svg" alt="Livro sobre Construc da Alura Books">
+        <div class="carrossel__container">
+            <div class="swiper">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="/assets/MetricasAgeis.svg"
+                            alt="Livro sobre Métricas Ágeis da Alura Books"></div>
+                    <div class="swiper-slide"><img src="/assets/Construct2.svg"
+                            alt="Livro sobre Construc da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/Liderança.svg"
+                            alt="Livro sobre Liderança da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/Gestão2.svg" alt="Livro sobre Gestão da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/Guia Front-end.svg"
+                            alt="Livro sobre Guia do Front-end da Alura Books">
+                    </div>
+                    <div class="swiper-slide"><img src="/assets/UX.svg" alt="Livro sobre UX da Alura Books"></div>
                 </div>
-                <div class="swiper-slide"><img src="/assets/Liderança.svg" alt="Livro sobre Liderança da Alura Books">
-                </div>
-                <div class="swiper-slide"><img src="/assets/Gestão2.svg" alt="Livro sobre Gestão da Alura Books"></div>
-                <div class="swiper-slide"><img src="/assets/Guia Front-end.svg"
-                        alt="Livro sobre Guia do Front-end da Alura Books">
-                </div>
-                <div class="swiper-slide"><img src="/assets/UX.svg" alt="Livro sobre UX da Alura Books"></div>
-            </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
 
-            <div class="swiper-scrollbar"></div>
-        </div>
-
-        <div class="card">
-            <div class="card__descricao">
-                <div class="descricao">
-                    <img src="assets/Estrelinhas.svg" class="descricao__imagem">
-                    <h3 class="descricao__titulo">Autora do mês</h3>
-                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
-                    </p>
-                </div>
-                <img src="assets/Juliana.svg" class="descricao__imagem">
+                <div class="swiper-scrollbar"></div>
             </div>
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
+
+            <div class="card">
+                <div class="card__descricao">
+                    <div class="descricao">
+                        <img src="assets/Estrelinhas.svg" class="descricao__imagem">
+                        <h3 class="descricao__titulo">Autora do mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.
+                        </p>
+                    </div>
+                    <img src="assets/Juliana.svg" class="descricao__imagem">
+                </div>
+                <div class="card__botoes">
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="assets/Favoritos.svg" alt="Favoritar livro"></li>
+                        <li class="botoes__item"><img src="assets/Compras.svg" alt="Adicionar no carrinho de compras">
+                        </li>
+                    </ul>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
             </div>
         </div>
     </section>
